<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_the_passenger"
        android:orderInCategory="100"
        android:title="@string/action_surprise"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_to_traffic_lights"
        android:orderInCategory="100"
        android:title="@string/action_to_traffic_lights"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_to_converter"
        android:orderInCategory="100"
        android:title="@string/action_to_converter"
        app:showAsAction="never" />
</menu>