<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trafficLightsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292828">

    <Button
        android:id="@+id/trafficLightsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/show_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enteredNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trafficLightsStatusTextView" />

    <LinearLayout
        android:id="@+id/vButtonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <Button
        android:id="@+id/greenButton"
        android:layout_width="128dp"
        android:layout_height="49dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="402dp"
        android:text="@string/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/yellowButton"
        android:layout_width="128dp"
        android:layout_height="52dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="339dp"
        android:text="@string/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/redButton"
        android:layout_width="128dp"
        android:layout_height="54dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="274dp"
        android:text="@string/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/trafficLightsStatusTextView"
        android:layout_width="199dp"
        android:layout_height="123dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="481dp"
        android:text="@string/traffic_lights_off"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>